examples/ok/print_no_newline.bina
fn main() -> int {
    print("hello");
    print(" ");
    print("world");
    print("\n");
    return 0;
}
