examples/fail/lexer/invalid_float_suffix_exponent.bina
// EXPECT_LEXER_ERROR: invalid numeric suffix
fn main() -> int {
    let x = 1e6i32;
    return 0;
}
